@@ -333,6 +333,11 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -358,6 +363,13 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-modules jdk.incubator.vector</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
@@ -365,6 +377,7 @@
 					<jvmArguments>-Duser.timezone=Asia/Kolkata -XX:+UseZGC -XX:+ZGenerational -Xmx2g -Xms512m --add-modules jdk.incubator.vector</jvmArguments>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
